Fixing Overflow Issue in ng-grid on Windows machines
Added the correct overflow.

--- a/acm-user-interface/ark-web/src/main/webapp/resources/assets/css/application.css
+++ b/acm-user-interface/ark-web/src/main/webapp/resources/assets/css/application.css
@@ -302,7 +302,6 @@ iframe {
     border-bottom: 1px solid #e1e6ef;
     border-left: 0px;
     border-right: 0px;
-    z-index: 1000;
     position: relative;
 }
 
@@ -486,6 +485,7 @@ iframe {
 
 .ui-grid-viewport {
     height: auto !important;
+    overflow: auto !important;
 }
 
 .ui-grid {
